<resources>
    <string name="app_name">One-Sec</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about">Explore One-Sec</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_tnc">Policy</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Account Settings</string>
    <string name="menu_profile">Profile</string>

    <string name="login_credentials">Credentials</string>
    <string name="app_lock">App Locker</string>
    <string name="photo_vault">Photo Vault</string>
    <string name="notes">Notes</string>
    <string name="credit_card">Credit Card</string>


    <string name="dummy_name">dummy name</string>


    <string name="lock_first_btn" formatted="false">Protection (% s)</string>
     
    <string name="lockscreen_access_pattern_cell_added">Added cell</string>
        
    <string name="lockscreen_access_pattern_start">Draw unlock pattern</string>
        
    <string name="lockscreen_access_pattern_detected">Pattern has been saved </string>
        
    <string name="lockscreen_access_pattern_cleared">Pattern has been deleted </string>
          
    <string name="lock_recording_intro_header">Set the App\'s unlock pattern</string>
        
    <string name="lock_settings_help_how_to_record">How to draw an unlock pattern</string>
        
    <string name="lock_recording_incorrect_too_short">You should connect at least 4 points.</string>
        
    <string name="lock_pattern_entered_header">Record pattern</string>
        
    <string name="lock_need_to_confirm">Draw the pattern again to confirm</string>
        
    <string name="lock_need_to_unlock_wrong">The pattern do not match. Please try again.</string>
        
    <string name="password_gestrue_tips">Draw pattern to unlock</string>
        
    <string name="password_error_count">The pattern does not match. Please try again.</string>
        
    <string name="lock_draw_unlock_pattern">Draw the unlock pattern</string>
        
    <string name="lock_enter_pin_code">Enter a numeric password</string>
        
    <string name="lock_pattern_confirmed_header">Confirmed Pattern</string>
     
        <!--Digital unlock related-->
        
    <string name="num_create_text_01">Enter a 4-digit password to unlock</string>
        
    <string name="num_create_text_02">Enter again to confirm</string>
        
    <string name="num_create_text_03">Password does not match, please try again</string>
        
    <string name="number_1">1</string>
        
    <string name="number_2">2</string>
        
    <string name="number_3">3</string>
        
    <string name="number_4">4</string>
        
    <string name="number_5">5</string>
        
    <string name="number_6">6</string>
        
    <string name="number_7">7</string>
        
    <string name="number_8">8</string>
        
    <string name="number_9">9</string>
        
    <string name="number_0">0 </string>
        
    <string name="password_short">Please enter at least 4 characters. </string>
     
       
    <string-array name="lock_time_array">
                
        <item>15 seconds</item>
                
        <item>30 seconds</item>
                
        <item>1 minute</item>
                
        <item>3 minutes</item>
                
        <item>5 minutes</item>
                
        <item>10 minutes</item>
                
        <item>30 minutes</item>
                
        <item>Immediately </item>
            
    </string-array>
     
        
    <string name="dialog_tip"> Your Android version is greater than or equal Android 5.0, App Lock need to get the \"Application Usage\" permission
    </string>
    <string name="upstream_developer">Upstream Developer</string>
    <string name="up_stream_deve_name_espoir">Espoir</string>
    <string name="welcome_to_the_app_lock">Welcome to the App lock</string>
    <string name="reset">Reset</string>
    <string name="create_pattern">Create pattern</string>
    <string name="please_draw_your_pattern">Please draw your pattern</string>
    <string name="identity_confirmation">Identity confirmation</string>
    <string name="search_application">Search Apps</string>
    <string name="settings">Settings</string>
    <string name="lock_settings">Lock Settings</string>
    <string name="lock_immediately_after_locking_the_screen">Lock app immediately locking the phone</string>
    <string name="open">Open</string>
    <string name="change_the_password">Change the pattern</string>
    <string name="show_pattern">Show pattern</string>
    <string name="hide_pattern">Hide pattern</string>
    <string name="about_me">About Me</string>
    <string name="go_to_give_permission">Grant Permission</string>
    <string name="warning">Warning</string>
    <string name="search_applications">Search Apps&#8230;</string>
    <string name="search_for">Search For&#8230;</string>
    <string name="take_a_photo">Intruder selfie</string>
    <string name="_1_minute">1 minute</string>
    <string name="apps">Apps</string>
    <string name="accessibility_service_description">This permission is only used for locking the apps</string>
    <string name="accessibility_service_name">App lock</string>
    <string name="lock_type">Lock Type</string>
    <string name="pattern_is_required">Pattern is required when the Locked Apps are opened</string>
    <string name="pattern_is_not_required">Pattern is not required when the Locked Apps opened</string>
    <string name="intruder_selfie">Intruder Selfie</string>
    <string name="vibrate">Vibration</string>
    <string name="policy_txt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="verify_instructions">Place your finger of the fingerprint sensor or move to a trusted location to verify identity</string>
    <string name="fingerprint_authentication">Authentication</string>
    <string name="add_trusted_place">Add Trusted Place</string>


    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="text_no_credentials">No Credentials added. Click (+) button to add Credentials.</string>
    <string name="text_no_albums">No albums created. Click (+) button to create new Album.</string>
</resources>
